<resources>
    <string name="app_name">Fishing Guide</string>
    <string name="action_settings">Settings</string>

    <string name="activity_main_ramps">Boat Ramps</string>
    <string name="activity_main_fish">Fish</string>
    <string name="activity_main_shops">Shops</string>
    <string name="activity_main_brag">Brag about it</string>

    <string name="activity_ramps_close">Closest Boat Ramp</string>
    <string name="activity_ramps_all">List all Ramps</string>
    <string name="activity_ramps_hint">Shops</string>
    <string name="activity_ramps_search">Search</string>

    <string name="activity_fish_fresh">All Fresh Water Fish</string>
    <string name="activity_fish_salt">All Salt water fish</string>
    <string name="activity_fish_hint">Fish</string>
    <string name="activity_fish_search">Search</string>

    <string name="activity_shop_close">Closest Shop</string>
    <string name="activity_shop_all">List all Shops</string>
    <string name="activity_shop_hint">Shops</string>
    <string name="activity_shop_search">Search</string>

    <string name="activity_brag_facebook">Post to facebook</string>
    <string name="activity_brag_save">Save to galary</string>
    <string name="activity_brag_again">Take another</string>

    <string name="title_activity_boatramp">BoatrampActivity</string>
    <string name="title_activity_fish">FishActivity</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_activity_brag">BragActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
