<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_logo_imageView"
        android:src="@drawable/activity_main_logo"
        android:cropToPadding="false"
        android:layout_alignBottom="@+id/activity_main_ramps_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_ramps"
        android:id="@+id/activity_main_ramps_button"
        android:layout_centerHorizontal="true"
        android:onClick="clickBoatRamp"
        android:layout_marginTop="160dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_fish"
        android:id="@+id/activity_main_fish_button"
        android:layout_below="@+id/activity_main_ramps_button"
        android:layout_alignLeft="@+id/activity_main_ramps_button"
        android:layout_alignStart="@+id/activity_main_ramps_button"
        android:onClick="clickBoatFish"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_shops"
        android:id="@+id/activity_main_shops_button"
        android:layout_below="@+id/activity_main_fish_button"
        android:layout_alignLeft="@+id/activity_main_fish_button"
        android:layout_alignStart="@+id/activity_main_fish_button"
        android:onClick="clickBoatShop"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_brag"
        android:id="@+id/button4"
        android:layout_below="@+id/activity_main_shops_button"
        android:layout_alignLeft="@+id/activity_main_shops_button"
        android:layout_alignStart="@+id/activity_main_shops_button"
        android:onClick="clickBoatBrag"
        android:layout_marginTop="20dp" />

</RelativeLayout>
