<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_fish" tools:context="com.id12020261.fishingguide.FishActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_fish_fresh"
        android:id="@+id/activity_fish_all_fresh_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_fish_salt"
        android:id="@+id/activity_fish_all_salt_button"
        android:layout_below="@+id/activity_fish_all_fresh_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_fish_all_search_editText"
        android:layout_below="@+id/activity_fish_all_salt_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_fish_search"
        android:id="@+id/activity_fish_all_search_button"
        android:layout_below="@+id/activity_fish_all_search_editText"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
