<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_brag" tools:context="com.id12020261.fishingguide.BragActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/avtivity_brag_imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_brag_again"
        android:id="@+id/avtivity_brag_another_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_brag_save"
        android:id="@+id/avtivity_brag_save_button"
        android:layout_above="@+id/avtivity_brag_facebook_button"
        android:layout_alignLeft="@+id/avtivity_brag_facebook_button"
        android:layout_alignStart="@+id/avtivity_brag_facebook_button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_brag_facebook"
        android:id="@+id/avtivity_brag_facebook_button"
        android:layout_above="@+id/avtivity_brag_another_button"
        android:layout_alignLeft="@+id/avtivity_brag_another_button"
        android:layout_alignStart="@+id/avtivity_brag_another_button" />


</RelativeLayout>
